# llama-tq

./: .gitignore  CLAUDE.md  DISCUSSION_POST.md  README.draft.md  README.md  convert_hf_to_gguf.py
LEGION/: 2026-04-15-0930-opus-build-instructions.md  2026-04-15_0930_distillery_gemma4-tq-bugfix-test-request.md  2026-04-15_0935_llamatq_cpu-fallback-fix-pushed.md  2026-04-15_0940_llamatq_go-ahead-full-test.md  2026-04-15_1000_distillery_build-time-issue.md  2026-04-15_1005_llamatq_build-time-fix.md  2026-04-15_1015_distillery_build-failed-tq3-linker.md  2026-04-15_1020_llamatq_check-stale-build.md  2026-04-15_1030_distillery_tq3-deeper-analysis.md  2026-04-15_1035_llamatq_tq3-code-looks-ok.md  2026-04-15_1040_distillery_root-cause-weak-symbols.md  2026-04-15_1045_llamatq_weak-symbol-fix.md  2026-04-15_1110_distillery_compile-error-quantize-ref.md  2026-04-15_1115_llamatq_from-float-fix.md  2026-04-15_1230_distillery_gemma4-tq-test-results.md  2026-04-15_1700_llamatq_gemma4-bug-diagnosis.md  2026-04-15_1910_distillery_gemma4-diagnosis-results.md  2026-04-15_2000_llamatq_swa-bug-followup.md  2026-04-15_2015_distillery_swa-bug-followup-results.md  2026-04-15_2030_llamatq_swa-critical-test.md  2026-04-15_2100_distillery_fa-kernel-bug-confirmed.md  2026-04-15_2100_llamatq_swa-investigation-status.md  2026-04-15_2130_distillery_fix-partial-success.md  2026-04-15_2145_distillery_qwen35-workaround-production.md  2026-04-15_2200_distillery_full-test-summary.md  2026-04-15_2200_llamatq_pragmatic-fix-attempt.md  README.md  (+9 more)
autoresearch/: README.md  (+1 more)
tests/trellis-phase1/: BACKLOG.md  CMakeLists.txt  README.md  bench_encoder_gpu.cu  calibrated_outlier_bench.py  codebook_optimize.py  extract_v_samples.py  outlier_channels_poc.py  run_ppl_sweep.sh  run_ppl_sweep_cuda.sh  run_tg_bench_o1.sh  seed_kurtosis_sweep.py  test_ggml_roundtrip.c  test_ggml_rt  tqprod_attention_sim.py  tqprod_poc.py  tqw2_validation.py  trellis_code.c  trellis_common.c  trellis_encdec.c  trellis_main.c  trellis_phase1  trellis_phase1.h  trellis_stubs.c  vtq_mixed_roundtrip.c  vtq_roundtrip_bench.py
tests/trellis-phase1/results/: RUN1B_NOTES.md  RUN1_NOTES.md  RUN2_NOTES.md  RUN3_NOTES.md  RUN4_NOTES.md  RUN5_NOTES.md  RUN6_NOTES.md  RUN7_NOTES.md  run10_final_real.csv  run11_ppl_0.8b.csv  run12_ppl_0.8b_cuda.csv  run14_gpu_encoder_0.8b.csv  run17_seed_kurtosis_35b.csv  run1_gauss_4k_zero_start.csv  run1b_gauss_4k_open_start.csv  run20_tqw2_mse.csv  run21_08b_postbuild.csv  run22_08b_full_sweep.csv  run2_gauss_4k_table_vs_3g.csv  run3_beam_sweep.csv  run3b_beam_quickselect.csv  run4_group_sweep.csv  run5_dist_bimodal.csv  run5_dist_gauss.csv  run5_dist_laplace.csv  run5_dist_student5.csv  run5_dist_vcachelike.csv  run6_t5_vcachelike.csv  run6b_t5_gauss.csv  run7_real_vweights.csv  run7b_real_27b.csv  run8_bpw_floor.csv  run9_group_viterbi.csv
tools/server/: CMakeLists.txt  server-anthropic-cache.cpp  server-anthropic-cache.h  server-common.cpp  server-context.cpp  server-context.h  server-http.cpp  server-task.cpp
tools/server/public/: bundle.css
tools/server/webui/src/lib/components/app/chat/ChatScreen/: ChatScreen.svelte
tools/server/webui/src/lib/components/app/chat/ChatSidebar/: ChatSidebar.svelte
tools/server/webui/src/lib/components/app/models/: ModelId.svelte  ModelsSelectorSheet.svelte
tools/server/webui/src/lib/constants/: model-id.ts
tools/server/webui/src/lib/services/: models.service.ts
(+439 files in other folders)
